--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
@@ -28,7 +29,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.477.0",
     "react": "^19.0.0",
-    "react-day-picker": "^9.6.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
